--- a/src/locales/so.json
+++ b/src/locales/so.json
@@ -1,16 +1,19 @@
 {
-    "amountTransfer" : "Lacagtaada waa la wareejiyay",
-    "loginSuccess"   : "waad soo gashay",
-    "notImplemented" : "Lama Fulin",
-    "allUsers"       : "Isticmaalayaasha oo dhan waa kuwan",
-    "singleUser"     : "Successfuly Fetched One User",
-    "notExist"       : "Aqoonsiga isticmaaluhu ma jiro",
-    "IdExist"        : "Aqoonsiga isticmaaluhu waa uu jiraa",
-    "emailExists"    : "Emailkan isticmaale ayaa horay u jiray",
+    "amountTransfer" : "lacagtaada waa la diray",
+    "loginSuccess"   : "waad soo gashay systemka",
+    "notImplemented" : "lama Fulin wali",
+    "allUsers"       : "dhammaan Userada oo dhan waa kuwan",
+    "singleUser"     : "hal User Xogtiisa ayaa lasoo qabtay",
+    "notExist"       : "aqoonsiga isticmaaluhu ma ahan mid jira",
+    "IdExist"        : "aqoonsiga isticmaaluhu horay ayuu u jiray",
+    "emailExists"    : "emailkan horay ayuu u diiwaangashanaa",
+    "emailNotExists" : "emailkan Ma ahan Mid Jira",
     "userUpdated"    : "Isticmaalaha si guul leh ayaa loo cusboonaysiiyay",
+    "updateError"    : "Isticmaalahu lama cusboonaysiin!, fadlan isku day markale",
     "userDeleted"    : "Isticmaalaha si guul leh ayaa loo tirtiray",
-    "internalErrorMsg" : "Waxbaa qaldamay!",
-    "incorrectEmailOrPassError" : "Email ka ama Password ka Waa Uu Khaldanyahay!",
-    "registerSuccess": "Waa lagu diiwaan galiyay Fadlan hubi iimaylkaga si aad u xaqiijiso akoonkaaga",
-    "registerError": "Wax baa ka khaldamay diiwaangelinta fadlan isku day mar kale"
+    "internalErrorMsg" : "Waxbaa qaldamay!, fadlan markale kuso noqo",
+    "incorrectEmailOrPassError" : "emailka ama Passwordka Waa Uu Khaldanyahay!",
+    "registerSuccess": "Waa lagu diiwaan galiyay Fadlan hubi emailkaga si aad u xaqiijiso akoonkaaga",
+    "registerError": "Wax baa ka khaldamay diiwaangelinta fadlan isku day mar kale",
+    "allpermissions" : "list of all permission available"
 }
