--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,19 +1,20 @@
 {
-    "amountTransfer" : "تم تحويل المبلغ الخاص بك",
-    "loginSuccess"   : "لقد سجلت الدخول",
-    "notImplemented" : "لم تنفذ",
-    "allUsers"       : "جميع المستخدمين هنا",
-    "singleUser"     : "تم التقاط بيانات مستخدم واحد",
-    "notExist"       : "معرّف المستخدم غير موجود",
-    "IdExist"        : "معرّف المستخدم موجود بالفعل",
-    "emailExists"    : "البريد الإلكتروني للمستخدم موجود بالفعل",
-    "emailNotExists"    : "البريد الإلكتروني للمستخدم غير موجود",
-    "userUpdated"    : "تم تحديث المستخدم بنجاح",
-    "updateError"    : "لم تتم عملية التحديث بنجاح، حاول مرة أخرى",
-    "userDeleted"    : "تم حذف المستخدم بنجاح",
-    "internalErrorMsg" : "هناك خطأ ما!",
-    "incorrectEmailOrPassError" : "البريد الالكتروني او كلمة المرور غير صحيحة",
-    "registerSuccess": "انت تملك حساب مصرفي. يرجى التحقق من بريدك الإلكتروني للتحقق من الحساب",
-    "registerError": "حدث خطأ ما في التسجيل يرجى المحاولة مرة أخرى",
-    "allpermissions" : "list of all permission available"
+	"amountTransfer": "تم تحويل المبلغ الخاص بك",
+	"loginSuccess": "لقد سجلت الدخول",
+	"notImplemented": "لم تنفذ",
+	"allUsers": "جميع المستخدمين هنا",
+	"singleUser": "تم التقاط بيانات مستخدم واحد",
+	"notExist": "معرّف المستخدم غير موجود",
+	"IdExist": "معرّف المستخدم موجود بالفعل",
+	"emailExists": "البريد الإلكتروني للمستخدم موجود بالفعل",
+	"emailNotExists": "البريد الإلكتروني للمستخدم غير موجود",
+	"userUpdated": "تم تحديث المستخدم بنجاح",
+	"updateError": "لم تتم عملية التحديث بنجاح، حاول مرة أخرى",
+	"userDeleted": "تم حذف المستخدم بنجاح",
+	"internalErrorMsg": "هناك خطأ ما!",
+	"incorrectEmailOrPassError": "البريد الالكتروني او كلمة المرور غير صحيحة",
+	"registerSuccess": "انت تملك حساب مصرفي. يرجى التحقق من بريدك الإلكتروني للتحقق من الحساب",
+	"registerError": "حدث خطأ ما في التسجيل يرجى المحاولة مرة أخرى",
+	"allpermissions": "list of all permission available",
+	"userCreated": "userCreated"
 }
